--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.5.0",
+    "swiper": "^8.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
