--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,9 @@
               "src/assets/img-home"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/swiper/swiper-bundle.css",
+              "./node_modules/swiper/swiper-bundle.min.css"
             ],
             "scripts": []
           }
