--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
+    "@angular/common": "^13.2.3",
+    "@angular/compiler": "^13.2.0",
+    "@angular/core": "13.2.3",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "hammerjs": "^2.0.8",
+    "ngx-carousel": "^1.3.5",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
