--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.0",
-    "@angular/common": "^13.2.3",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "13.2.3",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.5.0",
     "swiper": "^8.0.6",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
     "@angular/cli": "^13.3.0",
-    "@angular/compiler-cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
@@ -38,6 +38,16 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tslib": "^2.3.1",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "<<<<<<< HEAD\r # MyApp",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.elinext.com/training_angular/Aliaksandr_Nestsiarau.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
