--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "keycloak-angular": "^9.1.0",
+    "keycloak-js": "^17.0.1",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
