--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chart.js": "^3.7.1",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^17.0.1",
     "ngx-pagination": "^5.1.1",
