--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,9 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": [
+              "chartjs-plugin-gradient"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets",
@@ -36,7 +39,10 @@
               "node_modules/primeng/resources/primeng.min.css",
               "./src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [ 
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.js",
+              "node_modules/chartjs-plugin-gradient/dist/chartjs-plugin-gradient.js"]
           },
           "configurations": {
             "production": {
