--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chartjs-plugin-datalabels": "^2.0.0",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^17.0.1",
+    "moment": "^2.29.3",
     "ng2-charts": "^3.0.11",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
