--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@stomp/stompjs": "^6.1.2",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^3.7.1",
     "chartjs-plugin-datalabels": "^2.0.0",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^17.0.1",
     "moment": "^2.29.3",
+    "net": "^1.0.2",
     "ng2-charts": "^3.0.11",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "swiper": "^8.0.6",
     "zone.js": "~0.11.4"
   },
@@ -40,6 +44,8 @@
     "@types/jasmine": "~3.10.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "chartjs-plugin-gradient": "^0.5.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
