--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "allowedCommonJsDependencies": [
-              "chartjs-plugin-gradient"
+              "chartjs-plugin-gradient",
+              "sockjs-client",
+              "stompjs"
             ],
             "assets": [
               "src/favicon.ico",
