--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^13.3.0",
     "@angular/cdk": "^13.3.2",
     "@angular/common": "^13.3.0",
@@ -23,6 +24,7 @@
     "@types/chart.js": "^2.9.37",
     "chart.js": "^3.7.1",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "google-maps-angular": "^2.1.9",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^17.0.1",
     "moment": "^2.29.3",
@@ -41,6 +43,7 @@
     "@angular-devkit/build-angular": "~13.2.3",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.10.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
