--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@types/node": "^12.11.1",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
+    "@types/stripe-checkout": "^1.0.4",
+    "@types/stripe-v3": "^3.1.26",
     "chartjs-plugin-gradient": "^0.5.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
