--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d build"
   },
   "private": true,
-  "homepage": "https://alexandernestserov.github.io./flowers",
+  "homepage": "https://alexandernestserov.github.io./Flowers",
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^13.3.0",
