--- a/package.json
+++ b/package.json
@@ -66,11 +66,10 @@
     "tslib": "^2.3.1",
     "typescript": "~4.5.2"
   },
-  "description": "<<<<<<< HEAD\r # MyApp",
   "main": "karma.conf.js",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.elinext.com/training_angular/Aliaksandr_Nestsiarau.git"
+    "url": "https://github.com/AlexanderNestserov/Flowers/"
   },
   "keywords": [],
   "author": "",
